Fix some spacing on different screen sizes

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -680,9 +680,9 @@ section.contact-me {
   .section,
   .jumbotron {
     color: #fff;
-    width: 65%;
-    right: 5%;
-    left: 30%;
+    width: 66%;
+    /* right: 27%;
+    left: 27%; */
   }
 }
 
